updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Mechanical Engineer taking the plunge into tech. Experienced in program management, Six Sigma, and manufacturing. Excited about continuous improvement and persistent learning.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Seet home Chicago</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Eating and running my way through my adopted hometown of Kansas City. I look forward to Restaurant Week and Rock the Parkway half marathon weekend every year! When I am not out exploring KC, I’m hanging out with my black and tan dachshund, Chunk.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p> A role where I can create everyday interesting products that reach wide audiences and customers in innovative ways.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Shawnee, KS</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Web development is where art and technology converge on a daily basis to make unique experiences for end users and customers. It is a fast paced field where developers and engineers see the effects of their work immediately and make instant changes based on feedback and innovation. As a developer, I am able to be on the front lines of that action as well as experience the fusion of art and tech. It is a very rewarding role that allows me to grow professionally and personally.</p>
     </section>
 
     <footer id="footer">
