updating our details

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1>Introduction</h1>
       <p>Mechanical Engineer taking the plunge into tech. Experienced in program management, Six Sigma, and manufacturing. Excited about continuous improvement and persistent learning.</p>
       <h1>Where I'm From</h1>
-      <p>Seet home Chicago</p>
+      <p>Sweet home Chicago</p>
       <h1>What are your favorite hobbies?</h1>
       <p>Eating and running my way through my adopted hometown of Kansas City. I look forward to Restaurant Week and Rock the Parkway half marathon weekend every year! When I am not out exploring KC, I’m hanging out with my black and tan dachshund, Chunk.</p>
       <h1>What's your dream job?</h1>
