--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <h1>Where I'm From</h1>
       <p>Sweet home Chicago</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Eating and running my way through my adopted hometown of Kansas City. I look forward to Restaurant Week and Rock the Parkway half marathon weekend every year! When I am not out exploring KC, I’m hanging out with my black and tan dachshund, Chunk.</p>
+      <p>Eating and running my way through my adopted hometown of Kansas City. I look forward to Restaurant Week and Rock the Parkway half marathon weekend every year! When I am not out exploring KC, I’m hanging out with my black and tan dachshund named Chunk.</p>
       <h1>What's your dream job?</h1>
-      <p> A role where I can create everyday interesting products that reach wide audiences and customers in innovative ways.</p>
+      <p> A role where I can create everyday interesting products that reach wide audiences in innovative ways.</p>
       <h1>Where do you live?</h1>
       <p>Shawnee, KS</p>
       <h1>Why do you want to be a web developer?</h1>
